<resources>
    <string name="app_name">VedioSplashTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterAc</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="hint_txt">请输入账号</string>
    <string name="hint_pwd_txt">请输入密码</string>
    <string name="hint_phoneNum_txt">请输入手机号码</string>
    <string name="hint_verity_txt">请输入验证码</string>
    <string name="hint_phone_txt">请输入动态码</string>
    <string name="login_txt">登录</string>
    <string name="findPwd_txt">找回密码</string>
    <string name="register_txt">用户注册</string>
    <string name="crash_toast_txt">很抱歉，程序出现异常！即将退出</string>
    <string name="tab_normal_txt">普通登录</string>
    <string name="tab_fast_txt">手机快速登录</string>
    <string name="fast_verity_txt">获取动态码</string>

    <string-array name="tab_name">
        <item>普通登录</item>
        <item>手机快速登录</item>
    </string-array>
</resources>
