<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.atom.splash.vediosplashtest.LoginAc">

    <RelativeLayout
        android:id="@+id/userLogin_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/eidttext_common_height50"
        android:layout_marginLeft="@dimen/activity_common_margin10"
        android:layout_marginTop="@dimen/activity_common_margin10"
        android:layout_marginRight="@dimen/activity_common_margin10"
        android:background="@drawable/ic_login_box_input">
        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_login_ico_user"
            android:layout_margin="@dimen/activity_common_margin10"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <EditText
            android:id="@+id/userName_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eidttext_common_height30"
            android:layout_marginRight="@dimen/activity_common_margin10"
            android:background="@color/text_common_color"
            android:hint="@string/hint_txt"
            android:ems="10"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/bar"
            android:textColorHint="@color/bar"
            android:textSize="@dimen/word15"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/login_icon" />
    </RelativeLayout>
    <TextView
        android:id="@+id/erroruser_tap_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_common_margin10"
        android:layout_centerVertical="true"
        android:layout_below="@+id/userLogin_layout"
        android:layout_marginLeft="@dimen/activity_common_margin20"
        android:text="cdadlad"
        android:textSize="@dimen/word12"
        android:textColor="@color/text_unfocus"
        android:visibility="gone"/>
    <RelativeLayout
        android:id="@+id/psd_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/eidttext_common_height50"
        android:layout_marginLeft="@dimen/activity_common_margin10"
        android:layout_marginTop="@dimen/activity_common_margin10"
        android:layout_marginRight="@dimen/activity_common_margin10"
        android:background="@drawable/ic_login_box_input"
        android:layout_below="@+id/erroruser_tap_txt">
        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_login_ico_password"
            android:layout_margin="@dimen/activity_common_margin10"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>
        <EditText
            android:id="@+id/passWord_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eidttext_common_height30"
            android:layout_toRightOf="@+id/password_icon"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_common_margin10"
            android:background="@color/text_common_color"
            android:hint="@string/hint_pwd_txt"
            android:ems="10"
            android:maxLength="20"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/bar"
            android:textColorHint="@color/bar"
            android:textSize="@dimen/word15"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/errorpsd_tap_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_common_margin10"
        android:layout_centerVertical="true"
        android:layout_below="@+id/psd_layout"
        android:layout_marginLeft="@dimen/activity_common_margin20"
        android:text="cdadlad"
        android:textSize="@dimen/word12"
        android:textColor="@color/text_unfocus"
        android:visibility="gone"/>
    <RelativeLayout
        android:id="@+id/login_Btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/errorpsd_tap_txt">
        <Button
            android:id="@+id/login_Btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_header_height"
            android:layout_margin="@dimen/activity_common_margin20"
            android:layout_centerVertical="true"
            android:text="@string/login_txt"
            android:textSize="@dimen/word15"
            android:textColor="@color/text_unfocus"
            android:background="@drawable/login_button_bg"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_Btn_layout"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/findPWD_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_common_margin20"
            android:layout_marginTop="@dimen/activity_common_margin10"
            android:layout_marginRight="@dimen/activity_common_margin20"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/findPwd_txt"
            android:textSize="@dimen/word16"/>
        <TextView
            android:id="@+id/register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_common_margin20"
            android:layout_marginTop="@dimen/activity_common_margin10"
            android:layout_marginLeft="@dimen/activity_common_margin20"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/register_txt"
            android:textSize="@dimen/word16"/>
    </LinearLayout>
</RelativeLayout>
